--- a/PROG2/test-output/old/Default suite/classes.html
+++ b/PROG2/test-output/old/Default suite/classes.html
@@ -4,70 +4,54 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>bwi.prog2B.SS2017.wi16b044_kapferer.ExerciseSheet01.test.TrackTest</td>
+<td>bwi.prog2B.SS2017.wi16b044_kapferer.ExerciseSheet02.test.EventTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>setWriter</td>
+<td>getDate</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>setPerformer</td>
+<td>getVenue</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>getDuration</td>
+<td>getDescription</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>getPerformer</td>
+<td>setVenue</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>checkInit</td>
+<td>getArtist</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>setWriterNull</td>
+<td>getAttendees</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>setYear</td>
+<td>Event</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>setPerformerNull</td>
+<td>setAttendees</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>getString</td>
+<td>setDescription</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>writerIsKnown</td>
+<td>setArtist</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>getWriter</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>getYear</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>setDuration</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>getTitle</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>setTitle</td>
+<td>setDate</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
